Fix button overflow

--- a/web/static/web/css/tenso.css
+++ b/web/static/web/css/tenso.css
@@ -57,3 +57,7 @@ body {
 .tenso-share {
     margin-bottom: 5px;
 }
+
+.tenso-share-button {
+    white-space: normal;
+}
